Fix sticky on iPhone - add webkit prefix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,3 +116,8 @@ button {
 a {
   cursor: pointer;
 }
+
+.sticky {
+  position: -webkit-sticky !important;
+  position: sticky !important;
+}
